dark mode fix

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,13 +5,12 @@
  * to inject Tailwind's styles into your CSS.
  * For more information, see: https://tailwindcss.com/docs/installation#include-tailwind-in-your-css
  */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 /**
  * END --- SETUP TAILWINDCSS EDIT
  */
 body {
-  background-color: #252636;
-  /* background-color: rgb(19, 20, 23); */
+  @apply bg-white dark:bg-[#252636];
 }
